# AgentMesh

./: .env.example  .gitignore  .gitmodules  .vercelignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BUIDL_SUBMISSION.md  DEMO_SCRIPT_VIDEO.md  Dockerfile.agent  Dockerfile.dashboard  Dockerfile.platform  Makefile  ONE_PAGER.md  PITCH_DECK.md  Procfile  README.md  docker-compose.saas.yml  docker-compose.yml  mesh-animation.html  package-lock.json  package.json  pnpm-lock.yaml  requirements.platform.txt  vercel.json
bridge/: filters.py  server.py
dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
docs/: DEMO_SCRIPT.md  DORAHACKS_BUIDL.md  MQTT_TOPICS.md  PITCH.md  PROTOCOL.md
fern/: docs.yml  fern.config.json  generators.yml
foxmq/: Dockerfile  setup.sh
mesh/: __init__.py  cli.py  pyproject.toml
mesh/agents/: base.py  buyer.py  inspector.py  logistics.py  oracle.py  supplier.py
mesh/core/: capability_utils.py  clock.py  config.py  crypto.py  identity.py  ledger.py  messages.py  protocol.py  registry.py  reputation.py  state.py  topics.py  transport.py
mesh/healing/: detector.py  recovery.py  redistributor.py
mesh/llm/: __init__.py  base.py  bedrock.py  cache.py  openrouter.py  prompts.py  router.py
mesh/negotiation/: arbiter.py  engine.py  strategies.py
mesh/scenarios/: base.py  electronics.py
mesh_platform/: app.py  config.py  dependencies.py  tenant_agent.py
platform/: pyproject.toml
platform/migrations/: alembic.ini  env.py
platform_tests/: conftest.py  test_analytics.py  test_api_keys.py  test_auth.py  test_gateway.py  test_marketplace.py  test_marketplace_pbt.py  test_payments.py  test_rbac.py  test_scenario_serialization.py  test_scenario_validation.py  test_scenarios.py  test_sink.py  test_sla.py  test_sla_pbt.py  test_webhooks.py  test_workspaces.py
(+171 files in other folders)
