[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-platform"
version = "0.1.0"
description = "MESH SaaS Platform - Enterprise control plane for decentralized supply chain coordination"
requires-python = ">=3.11"
dependencies = [
    "mesh",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "bcrypt>=4.0",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "paho-mqtt>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["platform_tests"]
asyncio_mode = "auto"
